Fully implement reqour adjuster